src/test/resources/de/cd4analysis/cocos/ebnf/invalid/CD4AC0034.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0034 {
  class A {
    / String a = null;
    / String b = "b";
    / int c = 1;
  }
}
